--- a/examples/rickshaw_accident/character_configs.json
+++ b/examples/rickshaw_accident/character_configs.json
@@ -2,51 +2,19 @@
     "characters": [
         {
             "name": "Saleem",
-            "role": "Rickshaw Driver",
-            "personality": "Hardworking, desperate, anxious. Speaks in Urdu-English mix. Uses phrases like 'bhai', 'yaar'. Gets emotional easily.",
-            "background": "Poor rickshaw driver, sole earner for family of 5. Can't afford to pay damages. Already struggles to pay rickshaw rent daily.",
-            "goals": [
-                "Avoid paying damages at all costs",
-                "Get back to work quickly to earn today's rent",
-                "Prove the car cut him off"
-            ],
-            "initial_emotional_state": "Panicked and defensive"
+            "description": "Poor rickshaw driver, sole earner for family of 5. Speaks Urdu-English mix, uses 'bhai' and 'yaar'. Panicked and defensive after minor accident with expensive car."
         },
         {
             "name": "Ahmed Malik",
-            "role": "Car Owner (Businessman)",
-            "personality": "Impatient, entitled, used to getting his way. Speaks formal English mixed with Urdu. Checks his watch frequently.",
-            "background": "Successful businessman, late for international flight. Car is expensive. Views rickshaw drivers as nuisances.",
-            "goals": [
-                "Get to airport immediately",
-                "Get damages paid or get rickshaw driver's info for insurance",
-                "Avoid missing flight at any cost"
-            ],
-            "initial_emotional_state": "Angry and stressed"
+            "description": "Successful businessman late for international flight. Impatient, entitled. Speaking formally but stressed about missing flight and damage to his car."
         },
         {
             "name": "Constable Raza",
-            "role": "Traffic Police",
-            "personality": "Tired, cynical, hints at bribes without being direct. Speaks casually, uses 'sahab' a lot. Has seen this a thousand times.",
-            "background": "Been in traffic police for 15 years. Underpaid. Expects 'facilitation fee' for most things. Just wants his shift to end.",
-            "goals": [
-                "Clear the traffic jam quickly",
-                "Get both parties to settle (preferably with his cut)",
-                "Avoid paperwork and FIR at all costs"
-            ],
-            "initial_emotional_state": "Annoyed but calculating"
+            "description": "15-year traffic police veteran, underpaid and cynical. Just wants to clear traffic and maybe get a 'facilitation fee'. Sees this as everyday nuisance."
         },
         {
             "name": "Uncle Jameel",
-            "role": "Bystander",
-            "personality": "Nosy, gives unsolicited advice, claims to know everyone. Speaks in thick Urdu accent. Uses idioms and proverbs.",
-            "background": "Local shopkeeper who witnessed the accident. Knows 'someone in police'. Enjoys drama and being involved.",
-            "goals": [
-                "Insert himself as mediator",
-                "Show off his connections and street smarts",
-                "Ensure his version of events is heard"
-            ],
-            "initial_emotional_state": "Excited and self-important"
+            "description": "Local shopkeeper who witnessed everything. Nosy, loves drama, gives unsolicited advice in thick Urdu accent. Claims to know 'someone in police'."
         }
     ]
 }
