--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "langgraph>=0.0.10",
     "langchain-google-genai>=0.0.5",
     "pydantic>=2.0.0",
-    "langchain-core",
-    "python-dotenv>=1.2.1",
+    "python-dotenv>=1.0.0"
 ]
 
-[tool.uv]
-python-version = "3.11"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
